# burnlens

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_AI.md  Dockerfile  FRONTEND_INTEGRATION.md  GEMINI.md  HANDOFF.md  LICENSE  PHASE10_HANDOFF.md  Procfile  README.md  TEAMS_IMPLEMENTATION.md  TODOS.md  azure-pipelines.yml  burnlens.yaml.example  docker-compose.yml  pyproject.toml  railway.toml  requirements-test.txt  requirements.txt  test_providers.py  vercel.json
.github/workflows/: cron-evaluate-alerts.yml  deploy-railway.yml  publish.yml  test.yml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/backlog/: burnlens_roadmap_prompts.md  frontend-api-gaps.md  v1.2-auth-notifications.md  v1.3-cloud-key-governance.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/phases/01-data-foundation/: 01-01-SUMMARY.md
.planning/phases/02-detection-engine/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-04-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-asset-management-api/: 03-01-SUMMARY.md  (+2 more)
api/: auth.py  billing.py  config.py  crypto.py  dashboard.py  database.py  enterprise.py  ingest.py  main.py  models.py  team.py
api/telemetry/: forwarder.py
burnlens/: __init__.py  __main__.py  budget_engine.py  cli.py  cli_wrapper.py  config.py  doctor.py  export.py  feature_flags.py  git_context.py  interceptor.py  key_budget.py  keys.py  patch.py  server.py  virtual_keys.py
burnlens/alerts/: digests.py  discovery.py  email.py  engine.py  slack.py  terminal.py  types.py
burnlens/analysis/: budget.py  prompt_analyzer.py  recommender.py  reports.py  waste.py
burnlens/api/: __init__.py  assets.py  discovery.py  providers.py  schemas.py
burnlens/cache/: embeddings.py  manager.py
burnlens/cloud/: __init__.py  sync.py
burnlens/cost/: calculator.py  pricing.py
burnlens/dashboard/: cloud_compat.py  routes.py
burnlens/detection/: __init__.py  anomaly.py  billing.py  classifier.py  scheduler.py  wrapper.py
burnlens/providers/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  downgrade.py  google.py  openai.py  openai_compatible.py  registry.py
burnlens/proxy/: interceptor.py  providers.py  router.py  server.py  streaming.py
burnlens/reports/: weekly.py
burnlens/scan/: __init__.py  _common.py  claude_code.py  codex.py  cursor.py  gemini_cli.py
burnlens/storage/: database.py  models.py  queries.py  wal.py
burnlens/telemetry/: __init__.py  otel.py
burnlens_cloud/: README.md  __init__.py  action_tokens.py  actions_api.py  alert_engine.py  alerts_api.py  api_keys_api.py  auth.py  billing.py  clickhouse.py  config.py  cron_api.py  dashboard_api.py  database.py  deployment_api.py  email.py  encryption.py  ingest.py  main.py  models.py  pii_crypto.py  plans.py  rate_limit.py  settings_api.py  streaming.py  stubs_api.py  team_api.py
burnlens_cloud/compliance/: audit.py  purge.py  retention_prune.py
burnlens_cloud/deployment/: status.py
burnlens_cloud/telemetry/: forwarder.py  otel_proto.py
deploy/: README.md  docker-compose.enterprise.yml
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: ARCHITECTURE.md  KEY_ROTATION_RUNBOOK.md  PRODUCTION_READINESS.md  PROVIDERS.md  burnlens_roadmap_prompts.md  demo_killswitch.sh  discovery-guide.md  enhancement_plan.md  phase1_build_spec.docx  phase1_discovery_build_spec.md  phase2_build_spec.docx  phase2_guardrails_build_spec.md  phase3_build_spec.docx  phase3_compliance_build_spec.md  phase4_build_spec.docx  phase4_governance_platform_build_spec.md  railway_setup.md  record_demo.sh
docs/internal/: current-state.md  database-schema.md  provider-flow.md  release-checklist.md
docs/plans/: 2026-06-12-durable-local-wal-sync.md  2026-06-12-otel-genai-compatibility.md
frontend/: .env.example  .env.local.example  .gitignore  README.md  dashboard.html  index.html  package-lock.json  package.json  playwright.config.ts  signup.html  vercel.json  vitest.config.ts
frontend/auth/: callback.html
frontend/public/: dashboard.html  signup.html  team.html
frontend/scripts/: build-support-index.ts
frontend/support-knowledge/: faq.md  troubleshooting.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
landing/: index.html
packaging/burnlens-proxy/: build.sh  pyproject.toml
scripts/: dump_openapi.py  seed_test_data.py  test_e2e_local.sh
tests/: __init__.py  conftest.py  test_activity_pii_purge.py  test_alert_dedup.py  test_alerts.py  test_analysis.py  test_anomaly_detection.py  test_api.py  test_api_phase3_validation.py  test_archival.py  test_asset_sort.py  test_audit_log.py  test_auth.py  test_billing.py  test_billing_google.py  test_billing_usage.py  test_billing_webhook_phase7.py  test_budget_forecast.py  test_budget_setting.py  test_budgets.py  test_cli.py  test_cli_keys.py  test_cli_wrapper.py  test_cloud_sync.py  test_cloud_sync_e2e.py  test_cors_on_500.py  test_cors_preflight.py  test_cost.py  test_csrf_machine_endpoints.py  test_custom_pricing.py  test_customers.py  test_dashboard.py  test_dashboard_api.py  test_demo_killswitch.py  test_detection_billing.py  test_detection_classifier.py  test_detection_wrapper.py  test_digests.py  test_discovery_alerts.py  test_discovery_dashboard.py  (+75 more)
tests/e2e/: TEST_REPORT.md  conftest_e2e.py  seed_live.py  test_budget_enforcement.py  test_cli_analyze_e2e.py  test_cli_e2e.py  test_cost_accuracy.py  test_dashboard_consistency.py  test_proxy_e2e.py  test_waste_api_e2e.py
tests/streaming/: conftest.py  test_streaming_integration.py  test_streaming_unit.py
(+294 files in other folders)
