[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burnlens"
version = "0.1.1"
description = "See where your LLM money goes. Open-source proxy for AI API cost tracking, waste detection, and budget alerts."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Bhushan", email = "hello@burnlens.app"},
]
keywords = ["llm", "ai", "cost", "finops", "openai", "anthropic", "proxy", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
]

[project.urls]
Homepage = "https://burnlens.app"
Documentation = "https://burnlens.app/docs"
Repository = "https://github.com/burnlens/burnlens"
Issues = "https://github.com/burnlens/burnlens/issues"

[project.scripts]
burnlens = "burnlens.cli:app"

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "httpx[http2]>=0.27.0",
    "respx>=0.21.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live-server integration tests (require uvicorn + respx)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
