[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "burnlens"
version = "1.1.0"
description = "The open-source FinOps proxy for AI spend — track cost by feature, team, and customer across OpenAI, Anthropic, Google, Azure, Bedrock, and Groq."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Bhushan", email = "hello@burnlens.app" }]
maintainers = [{ name = "Sairin Technology", email = "hello@burnlens.app" }]
keywords = [
  "llm",
  "finops",
  "openai",
  "anthropic",
  "claude",
  "gpt",
  "gemini",
  "google-ai",
  "azure-openai",
  "aws-bedrock",
  "groq",
  "proxy",
  "cost",
  "cost-tracking",
  "ai-cost",
  "ai-finops",
  "ai-governance",
  "token-counting",
  "spend-tracking",
  "llm-observability",
  "observability",
  "monitoring",
  "budget-alerts",
  "cli",
  "developer-tools",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Information Technology",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
  "Topic :: Office/Business :: Financial",
  "Framework :: FastAPI",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "aiosqlite>=0.20.0",
  "apscheduler>=3.10.0,<4",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "httpx[http2]>=0.27.0",
  "mypy>=1.8",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21.0",
  "ruff>=0.3.0",
]
otel = [
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[project.scripts]
burnlens = "burnlens.cli:app"

[project.urls]
Homepage = "https://burnlens.app"
Documentation = "https://burnlens.app"
Repository = "https://github.com/sairintechnologycom/burnlens"
Issues = "https://github.com/sairintechnologycom/burnlens/issues"
Changelog = "https://github.com/sairintechnologycom/burnlens/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["burnlens*"]
exclude = ["burnlens_cloud*", "tests*"]

[tool.setuptools.package-data]
"burnlens.cost" = ["pricing_data/*.json"]
"burnlens.dashboard" = ["static/*", "static/**/*"]
